# home_work_22

./: .env.template  .gitignore  catalog_fixture.json  groups.json  pyproject.toml
blog/: forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_options.py  0003_blog_created_at.py  0004_alter_blog_is_published_alter_blog_views_counter.py  0005_blog_email.py  0006_rename_email_blog_author_email.py  0007_alter_blog_author_email.py
blog/templates/blog/: base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py  0002_alter_product_created_at_alter_product_image.py  0003_contacts.py  0004_alter_contacts_options.py  0005_alter_contacts_options_remove_contacts_email.py  0006_alter_product_category_alter_product_created_at_and_more.py  0007_alter_product_category_alter_product_created_at_and_more.py  0008_alter_product_options_product_is_published_and_more.py  0009_alter_product_owner.py
catalog/templates/catalog/: add_product.html  base.html  category_products.html  contacts.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
config/: settings.py  urls.py
magazine/: README.md  pyproject.toml
magazine/catalog/: views.py
magazine/config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_rename_avatar_customuser_image.py
(+9 files in other folders)
