[project]
name = "home-work-22"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
task23
    "django (>=5.2.6,<6.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "ipython (>=9.5.0,<10.0.0)",
    "black (>=25.1.0,<26.0.0)"

    "django (>=5.2.6,<6.0.0)"
develop
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
task23

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.1.1"


develop
